test navigation on hero component page

--- a/hero-component.html
+++ b/hero-component.html
@@ -53,8 +53,8 @@
               <label for="mobile-nav-checkbox" class="hamburger-icon" id="hamburger-icon"></label>
               <div class="mobile-nav-items">
                 <ul class="dropdown menu" data-dropdown-menu>
-                  <li class="role-nav-item"><a href="portfolio.html">Portfolio</a></li>
-                  <li class="role-nav-item"><a href="https://cv.thenotsomiserable.co.uk">CV</a></li>
+                  <li><a href="portfolio.html">Portfolio</a></li>
+                  <li><a href="https://cv.thenotsomiserable.co.uk">CV</a></li>
                 </ul>
               </div>
             </nav>
