update flex demo

--- a/flex.html
+++ b/flex.html
@@ -75,34 +75,34 @@
     <section>
       <h1>Justify</h1>
       <h2>flex-start</h2>
-      <div class="flex-justify-container">
-        <div class="flex-justify-item flex-demo-start"></div>
-        <div class="flex-justify-item flex-demo-start"></div>
-        <div class="flex-justify-item flex-demo-start"></div>
+      <div class="flex-justify-container" id="flex-demo-start">
+        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item"></div>
       </div>
       <h2>flex-end</h2>
-      <div class="flex-justify-container">
-        <div class="flex-justify-item flex-demo-end"></div>
-        <div class="flex-justify-item flex-demo-end"></div>
-        <div class="flex-justify-item flex-demo-end"></div>
+      <div class="flex-justify-container" id="flex-demo-end">
+        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item"></div>
       </div>
       <h2>center</h2>
-      <div class="flex-justify-container">
-        <div class="flex-justify-item flex-demo-center"></div>
-        <div class="flex-justify-item flex-demo-center"></div>
-        <div class="flex-justify-item flex-demo-center"></div>
+      <div class="flex-justify-container" id="flex-demo-center">
+        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item"></div>
       </div>
       <h2>space-between</h2>
-      <div class="flex-justify-container">
-        <div class="flex-justify-item flex-demo-space-around"></div>
-        <div class="flex-justify-item flex-demo-space-around"></div>
-        <div class="flex-justify-item flex-demo-space-around"></div>
+      <div class="flex-justify-container" id="flex-demo-space-around">
+        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item"></div>
       </div>
       <h2>space-around</h2>
-      <div class="flex-justify-container">
-        <div class="flex-justify-item flex-demo-space-between"></div>
-        <div class="flex-justify-item flex-demo-space-between"></div>
-        <div class="flex-justify-item flex-demo-space-between"></div>
+      <div class="flex-justify-container" id="flex-demo-space-between">
+        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item"></div>
       </div>
     </section>
     <!--Components-->
