update flex demo

--- a/flex.html
+++ b/flex.html
@@ -76,33 +76,33 @@
       <h1>Justify</h1>
       <h2>flex-start</h2>
       <div class="flex-justify-container" id="flex-demo-start">
-        <div class="flex-justify-item"></div>
-        <div class="flex-justify-item"></div>
-        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item">1</div>
+        <div class="flex-justify-item">2</div>
+        <div class="flex-justify-item">3</div>
       </div>
       <h2>flex-end</h2>
       <div class="flex-justify-container" id="flex-demo-end">
-        <div class="flex-justify-item"></div>
-        <div class="flex-justify-item"></div>
-        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item">1</div>
+        <div class="flex-justify-item">2</div>
+        <div class="flex-justify-item">3</div>
       </div>
       <h2>center</h2>
       <div class="flex-justify-container" id="flex-demo-center">
-        <div class="flex-justify-item"></div>
-        <div class="flex-justify-item"></div>
-        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item">1</div>
+        <div class="flex-justify-item">2</div>
+        <div class="flex-justify-item">3</div>
       </div>
       <h2>space-between</h2>
       <div class="flex-justify-container" id="flex-demo-space-around">
-        <div class="flex-justify-item"></div>
-        <div class="flex-justify-item"></div>
-        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item">1</div>
+        <div class="flex-justify-item">2</div>
+        <div class="flex-justify-item">3</div>
       </div>
       <h2>space-around</h2>
       <div class="flex-justify-container" id="flex-demo-space-between">
-        <div class="flex-justify-item"></div>
-        <div class="flex-justify-item"></div>
-        <div class="flex-justify-item"></div>
+        <div class="flex-justify-item">1</div>
+        <div class="flex-justify-item">2</div>
+        <div class="flex-justify-item">3</div>
       </div>
     </section>
     <!--Components-->
