update flex demo

--- a/flex.html
+++ b/flex.html
@@ -71,43 +71,68 @@
         </div>
       </div>
     </div>
-    <!--Components-->
+    <!--Flex justify-->
     <section>
       <h1>Justify</h1>
-      <h2>flex-start</h2>
+      <h2>Flex from start/h2>
       <div class="flex-justify-container" id="flex-demo-start">
         <div class="flex-justify-item">1</div>
         <div class="flex-justify-item">2</div>
         <div class="flex-justify-item">3</div>
       </div>
-      <h2>flex-end</h2>
+      <h2>Flex from end</h2>
       <div class="flex-justify-container" id="flex-demo-end">
         <div class="flex-justify-item">1</div>
         <div class="flex-justify-item">2</div>
         <div class="flex-justify-item">3</div>
       </div>
-      <h2>center</h2>
+      <h2>Flex from center</h2>
       <div class="flex-justify-container" id="flex-demo-center">
         <div class="flex-justify-item">1</div>
         <div class="flex-justify-item">2</div>
         <div class="flex-justify-item">3</div>
       </div>
-      <h2>space-between</h2>
+      <h2>Flex space between</h2>
       <div class="flex-justify-container" id="flex-demo-space-around">
         <div class="flex-justify-item">1</div>
         <div class="flex-justify-item">2</div>
         <div class="flex-justify-item">3</div>
       </div>
-      <h2>space-around</h2>
+      <h2>Flex space around</h2>
       <div class="flex-justify-container" id="flex-demo-space-between">
         <div class="flex-justify-item">1</div>
         <div class="flex-justify-item">2</div>
         <div class="flex-justify-item">3</div>
       </div>
     </section>
-    <!--Components-->
+    <!--Flex align-->
     <section>
       <h1>section 2</h1>
+      <h2>Flex start align</h2>
+      <div class="flex-justify-container" id="#flex-align-start">
+        <div class="flex-justify-item">1</div>
+        <div class="flex-justify-item">2</div>
+        <div class="flex-justify-item">3</div>
+      </div>
+      <h2>Flex end align</h2>
+      <div class="flex-justify-container" id="#flex-align-end">
+        <div class="flex-justify-item">1</div>
+        <div class="flex-justify-item">2</div>
+        <div class="flex-justify-item">3</div>
+      </div>
+      <h2>Centre align</h2>
+      <div class="flex-justify-container" id="#flex-align-center">
+        <div class="flex-justify-item">1</div>
+        <div class="flex-justify-item">2</div>
+        <div class="flex-justify-item">3</div>
+      </div>
+      <h2>Baseline</h2>
+      <div class="flex-justify-container" id="#flex-align-baseline">
+        <div class="flex-justify-item">1</div>
+        <div class="flex-justify-item">2</div>
+        <div class="flex-justify-item">3</div>
+      </div>
+    </section>
     </section>
     <!--Site footer-->
 
