update flex demo

--- a/flex.html
+++ b/flex.html
@@ -74,7 +74,7 @@
     <!--Flex justify-->
     <section>
       <h1>Justify</h1>
-      <h2>Flex from start/h2>
+      <h2>Flex from start</h2>
       <div class="flex-justify-container" id="flex-demo-start">
         <div class="flex-justify-item">1</div>
         <div class="flex-justify-item">2</div>
