update flex demo

--- a/flex.html
+++ b/flex.html
@@ -109,25 +109,25 @@
     <section>
       <h1>section 2</h1>
       <h2>Flex start align</h2>
-      <div class="flex-justify-container" id="#flex-align-start">
+      <div class="flex-align-container" id="#flex-align-start">
         <div class="flex-justify-item">1</div>
         <div class="flex-justify-item">2</div>
         <div class="flex-justify-item">3</div>
       </div>
       <h2>Flex end align</h2>
-      <div class="flex-justify-container" id="#flex-align-end">
+      <div class="flex-align-container" id="#flex-align-end">
         <div class="flex-justify-item">1</div>
         <div class="flex-justify-item">2</div>
         <div class="flex-justify-item">3</div>
       </div>
       <h2>Centre align</h2>
-      <div class="flex-justify-container" id="#flex-align-center">
+      <div class="flex-align-container" id="#flex-align-center">
         <div class="flex-justify-item">1</div>
         <div class="flex-justify-item">2</div>
         <div class="flex-justify-item">3</div>
       </div>
       <h2>Baseline</h2>
-      <div class="flex-justify-container" id="#flex-align-baseline">
+      <div class="flex-align-container" id="#flex-align-baseline">
         <div class="flex-justify-item">1</div>
         <div class="flex-justify-item">2</div>
         <div class="flex-justify-item">3</div>
