update flex demo

--- a/hero-component.html
+++ b/hero-component.html
@@ -49,7 +49,7 @@
             </div>
             <!-- Role navigation -->
             <nav class="mobile-navigation">
-              <input class="mobile-nav-checkbox" id="mobile-nav" type="checkbox">
+              <input class="mobile-nav-checkbox" id="mobile-nav-checkbox" type="checkbox">
               <label for="mobile-nav-checkbox" class="hamburger-icon" id="hamburger-icon"></label>
               <div class="mobile-nav-items">
                 <ul class="dropdown menu" data-dropdown-menu>
