--- a/portfolio.html
+++ b/portfolio.html
@@ -44,17 +44,20 @@
       <div class="mobile-header">
         <div class="row column">
           <div class="mobile-header-flex">
-            <div class="hamburger-icon"></div>
-            <!-- Role navigation -->
-            <nav class="role-nav">
-              <ul class="dropdown menu" data-dropdown-menu>
-                <li class="role-nav-item"><a href="portfolio.html">Portfolio</a></li>
-                <li class="role-nav-item"><a href="https://cv.thenotsomiserable.co.uk">CV</a></li>
-              </ul>
-            </nav>
             <div class="mobile-brand">
               <div class="logo-3"></div>
             </div>
+            <!-- Role navigation -->
+            <nav class="mobile-navigation">
+              <input class="mobile-nav-checkbox" id="mobile-nav-checkbox" type="checkbox">
+              <label for="mobile-nav-checkbox" class="hamburger-icon" id="hamburger-icon"></label>
+              <div class="mobile-nav-items">
+                <ul class="dropdown menu" data-dropdown-menu>
+                  <li><a href="portfolio.html">Portfolio</a></li>
+                  <li><a href="https://cv.thenotsomiserable.co.uk">CV</a></li>
+                </ul>
+              </div>
+            </nav>
           </div>
         </div>
       </div>
