resolve minor html niggles

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -102,7 +102,7 @@
             <div class="card-divider">
               The original header
             </div>
-            <img src="portfolio/blog-header-before.png">
+            <img src="portfolio/blog-header-before.png" alt="Screenshot showing the blog header before the project">
             <div class="card-section">
               <h4>The original blog header</h4>
               <p>The original blog header placed the logo underneath the global navigation. This seems odd placement as
@@ -119,7 +119,7 @@
             <div class="card-divider">
               Phase 1
             </div>
-            <img src="portfolio/blog-header-after.png">
+            <img src="portfolio/blog-header-after.png" alt="Screenshot showing the blog header after the project">
             <div class="card-section">
               <h4>Adding the swap on scroll behaviour</h4>
               <p>The first step was to relocate the logo and resize the header. There was a lot of
@@ -136,7 +136,8 @@
             <div class="card-divider">
               Phase 2
             </div>
-            <img src="portfolio/blog-header-after-mini.png">
+            <img src="portfolio/blog-header-after-mini.png"
+              alt="Screenshot showing the new minimised version of the header">
             <div class="card-section">
               <h4>The new blog header after scrolling</h4>
               <p>After doing some research, I decided to add and remove classes on scroll. Because
