--- a/component-updates.html
+++ b/component-updates.html
@@ -85,7 +85,7 @@
         breakpoint, functionality reverts to display just the icon, as there is less space.</p>
       <div class="media-frame">
         <div class="responsive-embed">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/mEPan-ueJ38" frameborder="0"
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/mEPan-ueJ38" style="border: none"
             allowfullscreen></iframe>
         </div>
       </div>
@@ -97,7 +97,7 @@
         looked at </p>
       <div class="media-frame">
         <div class="responsive-embed">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/DddfFJn0hIg" frameborder="0"
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/DddfFJn0hIg" style="border: none"
             allowfullscreen></iframe>
         </div>
       </div>
@@ -111,7 +111,7 @@
           so they are within the embed frame.</a></p>
       <div class="media-frame">
         <div class="responsive-embed">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/Y0CIeQ9UEXM" frameborder="0"
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Y0CIeQ9UEXM" style="border: none"
             allowfullscreen></iframe>
         </div>
       </div>
