--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </ul>
       </div>
       <h2>School</h2>
-      <p></p>GCSEs and A levels, Stroud High School</p>
+      <p>GCSEs and A levels, Stroud High School</p>
     </section>
 
     <footer>
