--- a/legacy-page-remodel.html
+++ b/legacy-page-remodel.html
@@ -71,6 +71,7 @@
     </section>
     <!--Introduction-->
     <section id="legacy-introduction">
+      <h1>Background information</h1>
       <p>Most of the site content for the University of Bath is generated through our two platforms:</p>
       <ul>
         <li>Typecase</li>
