--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
               University of Bath WordPress multisite
             </div>
             <a href="blogs.bath.html">
-              <img src="../assets/images/card-image-blogs.png">
+              <img src="../assets/images/card-image-blogs.png" alt="screen shot of the blog site header">
             </a>
             <div class="card-section">
               <p>One of my main tasks is to maintain our WordPress multisite install. In addition to maintaining site
@@ -94,7 +94,7 @@
               Remodelling of legacy pages
             </div>
             <a href="legacy-page-remodel.html">
-              <img src="../assets/images/card-image-catalogues.png">
+              <img src="../assets/images/card-image-catalogues.png" alt="screen shot of a programme catalogue page">
             </a>
             <div class="card-section">
               <p>Most of our main site content uses our in-house platforms. But we have some legacy systems which are
@@ -110,7 +110,7 @@
               Updates to existing components
             </div>
             <a href="component-updates.html">
-              <img src="../assets/images/card-image-search.png">
+              <img src="../assets/images/card-image-search.png" alt="screen shot of the website search bar">
             </a>
             <div class="card-section">
               <p>Many of the projects I am involved in are building on existing components. If we discover a bug or can
@@ -131,7 +131,7 @@
       </ul>
     </section>
     <!--Recent websites-->
-    <section id="project-cards">
+    <section id="web-site-builds">
       <h1>Website builds</h1>
       <p>I take on builds for individual clients, which can be on the client's preferred platform. This has tended to be
         through WordPress.</p>
