--- a/flex.html
+++ b/flex.html
@@ -49,7 +49,7 @@
             </div>
             <!-- Role navigation -->
             <nav class="mobile-navigation">
-              <input class="mobile-nav-checkbox" id="mobile-nav" type="checkbox">
+              <input class="mobile-nav-checkbox" id="mobile-nav-checkbox" type="checkbox">
               <label for="mobile-nav-checkbox" class="hamburger-icon" id="hamburger-icon"></label>
               <div class="mobile-nav-items">
                 <ul class="dropdown menu" data-dropdown-menu>
@@ -132,7 +132,6 @@
         <div class="flex-justify-item">2</div>
         <div class="flex-justify-item">3</div>
       </div>
-    </section>
     </section>
     <!--Site footer-->
 
