--- a/legacy-page-remodel.html
+++ b/legacy-page-remodel.html
@@ -49,8 +49,10 @@
             </div>
             <!-- Role navigation -->
             <nav class="mobile-navigation">
-              <input class="mobile-nav-checkbox" id="mobile-nav-checkbox" type="checkbox">
-              <label for="mobile-nav-checkbox" class="hamburger-icon" id="hamburger-icon"></label>
+              <input class="mobile-nav-checkbox" id="mobile-nav-checkbox" type="checkbox"
+                aria-labelledby="hamburger-icon">
+              <label for="mobile-nav-checkbox" class="hamburger-icon" id="hamburger-icon" aria-haspopup="true">Open
+                menu</label>
               <div class="mobile-nav-items">
                 <ul class="dropdown menu" data-dropdown-menu>
                   <li><a href="portfolio.html">Portfolio</a></li>
