--- a/index.html
+++ b/index.html
@@ -48,18 +48,14 @@
               <div class="logo-3"></div>
             </div>
             <!-- Role navigation -->
-            <nav class="mobile-navigation">
-              <input class="mobile-nav-checkbox" id="mobile-nav-checkbox" type="checkbox"
-                aria-labelledby="hamburger-icon">
-              <label for="mobile-nav-checkbox" class="hamburger-icon" id="hamburger-icon" aria-haspopup="true">Open
-                menu</label>
-              <div class="mobile-nav-items">
-                <ul class="dropdown menu" data-dropdown-menu>
+            <div class="mobile-navigation-container">
+              <div class="mobile-navigation-items">
+                <ul class="dropdown menu" data-dropdown-menu="">
                   <li><a href="portfolio.html">Portfolio</a></li>
                   <li><a href="https://cv.thenotsomiserable.co.uk">CV</a></li>
                 </ul>
               </div>
-            </nav>
+            </div>
           </div>
         </div>
       </div>
