updates to index, blogs and legacy pages

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -84,8 +84,8 @@
         was not totally straightforward.</p>
       <p>There was some existing shrinking and swapping functionality in the old site, using a library called <a
           href="https://github.com/imakewebthings/waypoints">Waypoints</a>. When I tried to repurpose this, the logo
-        swap would get confused and if you scrolled too quickly, it would assign the wrong one. The other issue was
-        that, the library's last update was in 2016. So it was time to seek an alternative.</p>
+        swap would get confused and if you scrolled too quickly, it would assign the wrong one. It also introduced a bug which caused the header to flicker. The other issue was
+        that, the library's last update was in 2016, so we couldn't securely rely on it's future compatability even if we resolved the current bugs. So it was time to seek an alternative.</p>
     </section>
     <!--Tabbed section-->
     <section>
