--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <body>
     <div class="header-wrapper">
+
       <header>
         <div class="row column">
           <div class="header-items">
@@ -70,12 +71,15 @@
     <section>
       <h1>Profile</h1>
       <p>As the Digital Supporter & Platform Trainer, I do a lot of varied tasks. I support our users, both through
-        training and advice, guidance and documentation. I also undertake regular Developer and Front-End Developer
-        tasks such as:</p>
+        training and advice, guidance and documentation. I make regular Front-End Developer and Developer changes to our
+        in-house platforms and WordPress platforms. I've highlighted some key examples <a
+          href"https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Here is a quick summary of my
+        regular tasks:</p>
       <div class="tnsm-card">
         <ul>
           <li>implementing front-end changes to <a href="https://www.bath.ac.uk">www.bath.ac.uk</a></li>
           <li>implementing front-end changes to <a href="https://blogs.bath.ac.uk">blogs.bath.ac.uk</a></li>
+          <li>making back-end changes to change details such as listing a new cohort on our course editing platform</li>
           <li>updating Apache config and implementing redirects</li>
           <li>maintaining and improving technical documentation</li>
           <li>GitLab and GitHub administration</li>
@@ -100,6 +104,7 @@
     <!--Skills summary-->
     <section>
       <h1>Skills summary</h1>
+      <h2>Technical</h2>
       <p>I'm currently completing the Front-End Engineer, Career Path course through Codecademy Pro, mostly to
         solidify
         existing skills and be up to date with current practices. I've also had a varied background of roles,
@@ -111,25 +116,51 @@
           <li>HTML5</li>
           <li>CSS and SCSS</li>
           <li>JQuery and JavaScript</li>
-          <li>Build processes such as Grunt and Gulp</li>
-          <li>User experience testing</li>
-          <li>Design tools such as Figma and Invision</li>
+          <li>uding build processes such as Grunt and Gulp</li>
+          <li>testing and updating project dependencies</li>
+          <li>user experience testing</li>
+          <li>investigating and verifying errors and bugs and proposing solutions</li>
+          <li>reviewing and testing code changes by others</li>
+          <li>testing that changes meet our code standards</li>
+          <li>design tools such as Figma and Invision</li>
           <li>GitHub and GitLab</li>
-          <li>WordPress and bespoke content management systems</li>
-          <li>Shopify, eCommerce</li>
+          <li>WordPress, WordPress multisites and bespoke content management systems</li>
+          <li>keeping up to date with version changes, such as WordPress and PHP. Ensuring updates are made within the
+            supported timeframes</li>
+          <li>Shopify and WooCommerce build and maintenance</li>
           <li>Apache config</li>
           <li>database admin, Oracle & MySQL</li>
+          <li>constructing database queries to create reports to aid management decisions</li>
           <li>project management</li>
           <li>Agile framework and practice</li>
-          <li>staff management</li>
           <li>Google Tag Manager, Optimize and Analytics</li>
           <li>Adobe Creative Suite</li>
           <li>Microsoft Office and Google Workspace</li>
         </ul>
       </div>
       <p>I also have some experience with PHP, JSON and Ruby. I regularly make changes to this code, so consider
-        myself
-        literate, but not pro.</p>
+        myself literate, but not pro.</p>
+      <h2>Other</h2>
+      <p>Some other less technical skills I've developed through working in an Agile team and within the wider
+        university context include:</p>
+      <div class="tnsm-card">
+        <ul>
+          <li>management of staff and co-management of a team</li>
+          <li>running team sessions such as sprint retro</li>
+          <li>pair programming</li>
+          <li>documenting processes or updating existing documentation</li>
+          <li>contributing to team discussions and arranging meetings</li>
+          <li>collaborating with others (designers, developers, content) on shared projects</li>
+          <li>communication on various channels including support tickets, updating stories and merge requests, creating
+            guidance</li>
+          <li>project planning and project management</li>
+          <li>working with stakeholders</li>
+          <li>meeting strict deadlines</li>
+          <li>communicating with users (with varying levels of technical experience) to understand potential feature
+            improvements, new features and bugs</li>
+          <li>training users to use our in-house CMS</li>
+          <li>being an active part of networks and user groups to share skills e.g. Office 365 Network and TOPdesk user
+            group</li>
     </section>
     <!--Recent employment-->
     <section>
