--- a/legacy-page-remodel.html
+++ b/legacy-page-remodel.html
@@ -72,8 +72,8 @@
       <h1>Background information</h1>
       <p>Most of the site content for the University of Bath is generated through our two platforms:</p>
       <ul>
-        <li>Typecase</li>
-        <li>Typecase for Courses</li>
+        <li>Typecase, in-house content publishing platform</li>
+        <li>Typecase for Courses, content publishing platform for course information</li>
       </ul>
       <p>Some of our older content can't be easily adapted for these platforms. Because we need to make our content more
         accessible and responsive for modern devices, we need to remodel the existing content to: </p>
