further updates to description of blog change

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -86,7 +86,7 @@
           href="https://github.com/imakewebthings/waypoints">Waypoints</a>. When I tried to repurpose this, the logo
         swap would get confused and if you scrolled too quickly, it would assign the wrong one. It also introduced a bug
         that caused the header to flicker. Also, as the library's last update was in 2016, we couldn't securely rely on
-        its future compatability even if
+        its future compatibility even if
         we resolved the current bugs. So it was time to seek an alternative rather than spend time on something which
         would need to be replaced later on.</p>
       <p>I did some research into similar functionality, looking at resources on sites such as <a
