--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <li>HTML5</li>
           <li>CSS and SCSS</li>
           <li>JQuery and JavaScript</li>
-          <li>uding build processes such as Grunt and Gulp</li>
+          <li>using build processes such as Grunt and Gulp</li>
           <li>testing and updating project dependencies</li>
           <li>user experience testing</li>
           <li>investigating and verifying errors and bugs and proposing solutions</li>
@@ -139,7 +139,7 @@
         </ul>
       </div>
       <p>I also have some experience with PHP, JSON and Ruby. I regularly make changes to this code, so consider
-        myself literate, but not pro.</p>
+        myself literate. I can usually interpret the code and spot errors if reviewing work by others.</p>
       <h2>Other</h2>
       <p>Some other less technical skills I've developed through working in an Agile team and within the wider
         university context include:</p>
