further updates to description of blog change

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -74,7 +74,7 @@
       <h3>The brief</h3>
       <ul>
         <li>Rearrange the existing header elements</li>
-        <li>Add additional behaviour so that the header shrinks and swaps logos on scroll</li>
+        <li>Add additional behaviour so that the header shrinks and swaps the logo when the user scrolls</li>
       </ul>
     </section>
     <!--Challenges-->
@@ -89,6 +89,7 @@
         its future compatibility even if
         we resolved the current bugs. So it was time to seek an alternative rather than spend time on something which
         would need to be replaced later on.</p>
+      <h2>Research and discovery</h2>
       <p>I did some research into similar functionality, looking at resources on sites such as <a
           href="https://developer.mozilla.org/en-US/">MDN Web Docs</a>, <a href="https://css-tricks.com/">CSS-Tricks</a>
         and <a href="https://codepen.io/">CodePen</a>. I also looked at forum discussions to see if I could try to avoid
@@ -98,6 +99,7 @@
     </section>
     <!--Tabbed section-->
     <section>
+      <h1>Different stages of the process</h1>
       <ul class="tabs" data-tabs id="example-tabs">
         <li class="tabs-title is-active"><a href="#panel1" aria-selected="true">The original header</a></li>
         <li class="tabs-title"><a data-tabs-target="panel2" href="#panel2">Phase 1</a></li>
