further updates to description of blog change

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -85,7 +85,8 @@
       <p>There was some existing shrinking and swapping functionality in the old site, using a library called <a
           href="https://github.com/imakewebthings/waypoints">Waypoints</a>. When I tried to repurpose this, the logo
         swap would get confused and if you scrolled too quickly, it would assign the wrong one. It also introduced a bug
-        that caused the header to flicker. Also, as the library's last update was in 2016, we couldn't securely rely on
+        that caused the header to flicker.</p>
+      <p>As the library's last update was in 2016, we couldn't securely rely on
         its future compatibility even if
         we resolved the current bugs. So it was time to seek an alternative rather than spend time on something which
         would need to be replaced later on.</p>
