update bullets on homepage

--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
     <!--Profile-->
     <section>
       <h1>Profile</h1>
-      <p>As the Digital Supporter & Platform Trainer, I do a lot of varied tasks. I support our users, both through
+      <p>I have been building websites since I was a student back in 2002-2006. I have more than 10 years of experience
+        working with WordPress.</p>
+      <p>In my current role as Digital Supporter & Platform Trainer, I do a lot of varied tasks. I support our users,
+        both through
         training and advice, guidance and documentation. I make regular Front-End Developer and Developer changes to our
         in-house platforms and WordPress platforms. I've highlighted some key examples <a
           href"https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Here is a quick summary of my
@@ -116,7 +119,8 @@
           <li>HTML5</li>
           <li>CSS and SCSS</li>
           <li>JQuery and JavaScript</li>
-          <li>using build processes such as Grunt and Gulp</li>
+          <li>using CSS frameworks such as Foundation and Bootstrap</li>
+          <li>using build processes such as Grunt and Gulp with NPM and Node</li>
           <li>testing and updating project dependencies</li>
           <li>user experience testing</li>
           <li>investigating and verifying errors and bugs and proposing solutions</li>
