update bullets on homepage

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
     <!--Profile-->
     <section>
       <h1>Profile</h1>
-      <p>I have been building websites since I was a student back in 2002-2006. I have more than 10 years of experience
-        working with WordPress.</p>
+      <p>I have been building websites since I was a student back in 2002-2006. And I have more than 10 years of
+        experience working with WordPress.</p>
       <p>In my current role as Digital Supporter & Platform Trainer, I do a lot of varied tasks. I support our users,
-        both through
-        training and advice, guidance and documentation. I make regular Front-End Developer and Developer changes to our
-        in-house platforms and WordPress platforms. I've highlighted some key examples <a
-          href"https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Here is a quick summary of my
-        regular tasks:</p>
+        both through training and advice, guidance and documentation. I make regular front-end and back-end developer
+        changes to our in-house content publisher platforms and WordPress platforms. I've highlighted some key examples
+        <a href"https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Here is a quick summary of my
+        regular tasks:
+      </p>
       <div class="tnsm-card">
         <ul>
           <li>implementing front-end changes to <a href="https://www.bath.ac.uk">www.bath.ac.uk</a></li>
