update bullets on homepage

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!--Profile-->
     <section>
       <h1>Profile</h1>
-      <p>I have been building websites since I was a student back in 2002-2006. And I have more than 10 years of
+      <p>I have been building websites for 15+ years and have more than 10 years of
         experience working with WordPress.</p>
       <p>In my current role as Digital Supporter & Platform Trainer, I do a lot of varied tasks. I support our users,
         both through training and advice, guidance and documentation. I make regular front-end and back-end developer
