update bullets on homepage

--- a/index.html
+++ b/index.html
@@ -80,19 +80,17 @@
       </p>
       <div class="tnsm-card">
         <ul>
-          <li>implementing front-end changes to <a href="https://www.bath.ac.uk">www.bath.ac.uk</a></li>
-          <li>implementing front-end changes to <a href="https://blogs.bath.ac.uk">blogs.bath.ac.uk</a></li>
-          <li>making back-end changes to change details such as listing a new cohort on our course editing platform</li>
+          <li>making front-end and back-end changes to <a href="https://www.bath.ac.uk">www.bath.ac.uk</a> and <a href="https://blogs.bath.ac.uk">blogs.bath.ac.uk</a></li>
           <li>updating Apache config and implementing redirects</li>
           <li>maintaining and improving technical documentation</li>
           <li>GitLab and GitHub administration</li>
           <li>testing and updating WordPress versions, plugins, PHP</li>
           <li>exporting data from Apache servers, Oracle & MySQL databases</li>
-          <li>Google Analytics and Google Tag manager set-up and data analysis</li>
+          <li>Google Analytics and Google Tag Manager set-up and data analysis</li>
         </ul>
       </div>
-      <p>I'm also a trustee for Frome-based charity <a href="https://www.blackswanarts.org.uk">Black Swan Arts</a>.
-        Through that, I provide as a volunteer:</p>
+      <p>I'm also a trustee for charity <a href="https://www.blackswanarts.org.uk">Black Swan Arts, Frome</a>.
+        As a volunteer, I provide:</p>
       <div class="tnsm-card">
         <ul>
           <li>web content editing for all online platforms</li>
