Linking it all together

--- a/flexbox-vs-grid/index.html
+++ b/flexbox-vs-grid/index.html
@@ -17,15 +17,19 @@
         </div>
         <nav class="desktop">
           <ul>
-            <li><a href="#">Artwork</a></li>
-            <li><a href="#">Team</a></li>
+            <li><a href="https://cv.thenotsomiserable.co.uk/portfolio.html">Portfolio</a></li>
+            <li><a href="https://cv.thenotsomiserable.co.uk/">CV</a></li>
+            <li><a href="#photo-wall">Damselflies</a></li>
+            <li><a href="#team">Team</a></li>
             <li><a href="https://www.instagram.com/thenotsomiserable" target="_blank" class="icon">Follow us<img src="./images/instagram.png" alt="Instagram icon" /></a></li>
           </ul>
         </nav>
         <nav class="mobile">
           <ul>
-            <li><a href="#">Artwork</a></li>
-            <li><a href="#">Team</a></li>
+            <li><a href="https://cv.thenotsomiserable.co.uk/portfolio.html">Portfolio</a></li>
+            <li><a href="https://cv.thenotsomiserable.co.uk/">CV</a></li>
+            <li><a href="#photo-wall">Damselflies</a></li>
+            <li><a href="#team">Team</a></li>
             <li><a href="https://www.instagram.com/thenotsomiserable" target="_blank" class="icon">Follow us<img src="./images/instagram.png" alt="Instagram icon" /></a></li>
           </ul>
         </nav>
