--- a/portfolio.html
+++ b/portfolio.html
@@ -121,11 +121,14 @@
     </section>
     <!--Components-->
     <section id="components-for-demonstration">
-      <h1>Components for demonstration</h1>
+      <h1>Components  and techniques for demonstration</h1>
       <p>I have created some common components which were not part of any particular live project, but just to
-        demonstrate some of my knowledge. I will be continuing to add to this section.</p>
+        demonstrate some of my knowledge.</p>
+      <p>As part of my ongoing Codecademy study, I'm also building up projects, which practice particular techniques or frameworks.</p>
+      <p>I will be continuing to add both.</p>
       <ul>
         <li><a href="hero-component.html">Hero component</a></li>
+        <li><a href="flexbox-vs-grid/index.html"</a>Flexbox Vs Grid</li>
       </ul>
     </section>
     <!--Recent websites-->
