--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
       <h1>Recent Employment</h1>
       <div class="tnsm-card">
         <ul>
+          <li>May 2022+, Frontend Developer, Spindogs</li>
           <li>2018+, Digital Supporter & Platform Trainer, University of Bath</li>
           <li>2012 - 2017, Programme Officer at University of Bath</li>
         </ul>
